--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/AI.svg" />
+    <meta property="og:title" content="AI Chat Visualization - Productivity Heatmap" />
+    <meta property="og:description" content="Visualize your AI interaction patterns and productivity through an interactive heatmap" />
+    <meta property="og:image" content="https://aichatvisualization.jacquesng.com/preview-image.jpg" />
+    <meta property="og:url" content="https://aichatvisualization.jacquesng.com" />
+
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="AI Chat Visualization" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Chat Visualization</title>
+
+
+
   </head>
   <body>
     <div id="root"></div>
